<resources>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="edit_song">Make Ringtone</string>
    <string name="app_name">MP3 Skull Music Download</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_tittle">Hochschule Darmstadt</string>
    <string name="icon_text_description">Menu Icon</string>
    <string name="found">FOUND:</string>
    <string name="error_2">"An error occured and the server is not responding.
Please be patient.Your internet is working fine.
Retry in a couple of minutes."</string>
    <string name="track">TRACKS</string>
    <string name="sorry">Sorry, no results found. Please use simple queries like: \"Drake started\" instead of \"Drake started from the bottom\"</string>
    <string name="pag_prev">Previous</string>
    <string name="action_starred">Markieren</string>
    <string name="unsatisfy">Unsatisfy? Try another Server</string>
    <string name="connecting">Connecting...</string>
    <string name="suggestions">Show Suggestions while typing. (App Restart needed)</string>
    <string name="server2">Connecting to server 2...</string>
    <string name="load_more">LOAD MORE...</string>
    <string name="pag_next">Next</string>
    <string name="stop_music">Stop Preview</string>
    <string name="dismiss_player">"The music preview will be stopped.
Do you want to close this window?"</string>
    <string name="titel_hint" />
    <string name="disclamer_label">Disclamer</string>
    <string name="decline">DECLINE</string>
    <string name="acceptDiscl">ACCEPT</string>
    <string name="loadmore">Automatically load more songs when scrolling down</string>
    <string name="rate_this">Please Rate Us</string>
    <string name="no_starred_book">"Sie haben noch kein Buch vorgemerk.
Klicken Sie auf das gelbe Sterne um ein Buch vorzumerken."</string>
    <string name="please_wait">Please wait...</string>
    <string name="titel">Titel</string>
    <string name="disclamer">"Please before you start using this App note that We do not host any of the music files provided on this App.
 We only indexes files which are located on public servers which are not affiliated with us.This application accesses publicly available search engines to obtain its results. We are only a service provider. No files are hosted and all links are dynamic, not static. Meaning every time a search is initiated from within the application, it goes out and collects results at that very moment. 
You download mp3 files from another host service. (not from Us) 
You must remove those songs from your Smartphone after listening to respect the Copyright."</string>
    <string name="verfasser">Verfasser</string>
    <string name="verfasser_hint">Nachname, Vorname</string>
    <string name="ISBN">ISBN</string>
    <string name="jahr">Jahr</string>
    <string name="error_result">"Couldn't connect to the server.
Please check your internet Connection and retry."</string>
    <string name="setting_label">SETTINGS</string>
    <string name="go_search">Suchen</string>
    <string name="jahr_von">von</string>
    <string name="jahr_bis">bis</string>
    <string name="input_hint">Artist, Title, Album...</string>
    <string name="menu_settings">Settings</string>
    <string name="search_results">Suchergebnisse</string>
    <string name="quit">Do you really want to Exit?</string>
    <string name="exit">Exit App</string>
    <string name="menu_refresh">Refresh Library</string>
    <string name="search">SEARCH</string>
    <string name="download">DOWNLOAD</string>
    <string name="redownload_mess">"You Already Downloaded This.
Do You Want To Download It Again?"</string>
    <string name="downloading">Downloading...</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="no_internet">Check your connection</string>
    <string name="cleared">History cleared</string>
    <string name="clear_confirm_mess">"Do you really want to clear the history?
Note that the App won't notify you anymore if you try to download a song that you already downloaded."</string>
    <string name="clear_hist_dial_titel">Clear History</string>
    <string name="updating_lib">Updating Library...</string>
    <string name="rep_bug">Contact Developer</string>
    <string name="lib_rescan">Force Media Rescan</string>
    <string name="clear_histo">Clear History</string>
    <string name="account">Konto</string>
    <string name="entl_head">ENTLIEHEN</string>
    <string name="reservations_head">VORBESTELLUNGEN</string>
    <string name="accept">OK</string>
    <string name="anzahl_ergebnisse_label">Gefunden:</string>
    <string name="no_book_label">Kein Trefer</string>
    <string name="preview">PREVIEW</string>
    <string name="main_activity_label">Ringdroid</string>
    <string name="search_edit_box">Search</string>
    <string name="button_start_record_activity">Record New</string>
    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and Ringdroid requires it to be writable.</string>
    <string name="no_sdcard">"Sorry, Ringdroid can't run unless you have an SD Card inserted."</string>
    <string name="sdcard_shared">"Sorry, Ringdroid can't run while your handset is mounted as a USB device."</string>
    <string name="button_options">Options</string>
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>
    <string name="edit_intent">Edit</string>
    <string name="time_seconds">seconds</string>
    <string name="what_to_do_with_ringtone">Saved! Make this your default ringtone or assign it to a contact?</string>
    <string name="set_default_notification">Saved! Make this your default notification?</string>
    <string name="make_default_ringtone_button">Make Default</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string>
    <string name="progress_dialog_loading">Loading...</string>
    <string name="progress_dialog_saving">Saving...</string>
    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string>
    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_show_all_audio">Show All Audio</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Default Notification</string>
    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>
    <string name="ringtone_type_label">Type:</string>
    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>
    <string name="ringtone_name_label">Name:</string>
    <string name="artist_name">Ringdroid</string>
    <string name="delete_ringtone">Delete Ringtone</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="delete_music">Delete Music</string>
    <string name="delete_audio">Delete Audio</string>
    <string name="confirm_delete_ringdroid">Are you sure?</string>
    <string name="confirm_delete_non_ringdroid">Are you sure? This file was not created using Ringdroid!</string>
    <string name="delete_ok_button">Delete</string>
    <string name="delete_cancel_button">Cancel</string>
    <string name="delete_failed">Unable to delete file</string>
    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>
    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="delete_tmp_error">Error deleting temporary file</string>
    <string name="record_error">Error launching Sound Recorder</string>
    <string name="too_small_error">"Can't save a file that small, try making it longer."</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>
    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">"Sorry, Ringdroid can't edit a file if it doesn't have an extension like .mp3 or .wav"</string>
    <string name="share_b">Share this App</string>
    <string name="choose_contact_title">Assign ringtone to which contact?</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string>
    <string name="server_title">Share your data!</string>
    <string name="server_prompt">Okay to send anonymous data about the ringtones and other sounds you create to Ringdroid.com so we can collect statistics? The privacy policy is at google.com/mobile/privacy.html</string>
    <string name="server_yes">OK to send</string>
    <string name="server_later">Ask later</string>
    <string name="server_never">Never</string>
    <string name="error_server_prompt">Okay to send anonymous data about this error to Ringdroid.com so we can try to fix this problem in the future? The privacy policy is at google.com/mobile/privacy.html</string>
    <string name="about_title">About Ringdroid</string>
</resources>