<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="300.0sp" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0sp" android:layout_marginTop="15.0sp" android:layout_marginRight="15.0sp" android:layout_marginBottom="15.0sp" android:text="@string/what_to_do_with_ringtone" />
    <Button android:id="@id/button_make_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0sp" android:layout_marginTop="10.0sp" android:layout_marginRight="15.0sp" android:text="@string/make_default_ringtone_button" />
    <Button android:id="@id/button_choose_contact" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0sp" android:layout_marginTop="10.0sp" android:layout_marginRight="15.0sp" android:text="@string/choose_contact_ringtone_button" />
    <Button android:id="@id/button_do_nothing" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0sp" android:layout_marginTop="20.0sp" android:layout_marginRight="15.0sp" android:layout_marginBottom="15.0sp" android:text="@string/do_nothing_with_ringtone_button" />
</LinearLayout>