<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="300.0sp" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/ringtone_type_label" />
    <Spinner android:id="@id/ringtone_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
    <TextView android:textSize="12.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/ringtone_name_label" />
    <EditText android:id="@id/filename" android:layout_width="280.0sp" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
    <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip">
        <Button android:id="@id/save" android:layout_width="100.0sp" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/file_save_button_save" />
        <Button android:id="@id/cancel" android:layout_width="100.0sp" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/file_save_button_cancel" />
    </LinearLayout>
</LinearLayout>